# glyph

./: .gitignore  AGENT.md  DEEP_REVIEW_2026-06-19.md  DEMO_QUICK_REFERENCE.md  DEMO_README.md  INDUSTRY_REVIEW_2026-06-21.md  LICENSE  PARITY_ROADMAP.md  README.md  RELEASE_CHECKLIST.md  SPEC_GOVERNANCE.md  agent-showcase.html  agent_showcase.py  demo-server.py  demo-ui.html
.github/workflows/: ci.yml
attic/: README.md
attic/agents/: DEMO_QUICK_REFERENCE.md  DEMO_README.md  agent.py  test_agent_framework.py  (+1 more)
conformance/: README.md  materialize_corpus.sh  run_conformance.py  run_conformance.sh
docs/: AGENTS.md  API_REFERENCE.md  CANONICAL_FORMS.md  CODEC_BENCHMARK_REPORT.md  COOKBOOK.md  GLYPH_FILE_FORMAT.md  GLYPH_T_SPEC.md  GRAMMAR_MATRIX.md  GS1_SPEC.md  GUIDE.md  LLM_ACCURACY_REPORT.md  LOOSE_MODE_SPEC.md  QUICKSTART.md  README.md  SPECIFICATIONS.md  STREAMING_VALIDATION_REPORT.md  visual-guide.html
gauntlet/: index.html
go/: README.md  go.mod
js/: README.md  STREAMING_VALIDATOR_PARITY.md  jest.config.cjs  package-lock.json  package.json  tsconfig.jest.json
py/: README.md  pyproject.toml
py/glyph/: __init__.py  decimal.py  loose.py  parse.py  patch.py  schema_evolution.py  stream_validator.py  types.py  types_decimal.py
py/glyph/stream/: __init__.py  crc.py  cursor.py  gs1t.py  hash.py  types.py  ui_events.py
py/tests/: __init__.py  glyph_gauntlet_test.py  test_agent_showcase.py  test_decimal.py  test_glyph.py  test_golden_corpus.py  test_gs1_cross_lang.py  test_gs1_stream.py  test_hypothesis.py  test_patch.py  test_roundtrip_golden.py  test_schema_evolution.py  test_stream_validator.py  test_truth_table.py
py/tests/cross_lang/: go_emitter.go
rust/glyph-codec/: Cargo.toml  README.md
rust/glyph-codec/src/: decimal128.rs  error.rs  json_bridge.rs  lib.rs  loose.rs  pool.rs  schema_evolution.rs  stream_validator.rs  tests.rs  types.rs
tests/: all_impl_parity_test.py  conftest.py  cross_impl_parity_test.py  roundtrip_stress_test.py
(+299 files in other folders)
