[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glyph-serial"
version = "1.0.0"
description = "Token-efficient serialization for AI agents"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Neumenon", email = "contact@neumenon.ai"}
]
keywords = ["serialization", "json", "llm", "ai", "tokens", "glyph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/Neumenon/glyph"
Documentation = "https://github.com/Neumenon/glyph/tree/main/docs"
Repository = "https://github.com/Neumenon/glyph"
Issues = "https://github.com/Neumenon/glyph/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["glyph*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
